--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,11 @@ services:
       - trading-network
 
   receiver:
-    build:
-      context: .
-      dockerfile: src/receiver/deribit/Dockerfile
-    env_file:
-      - config/.env
+    build: .
+    container_name: trading-app-receiver
+    volumes:
+      - ./config:/app/config:ro
+      - trading-data:/app/data
     environment:
       - DB_BASE_PATH=/app/data
     security_opt:
@@ -25,23 +25,15 @@ services:
     read_only: true
     tmpfs:
       - /tmp
-    volumes:
-      - ./config:/app/config:ro
-      - ./data:/app/data:rw  # Single volume mapping
-    depends_on:
-      redis:
-        condition: service_healthy
-    networks:
-      - trading-network
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '1.0'
-    user: "1001:1001"  # Match UID/GID from Dockerfile
+    user: "1001:1001"
 
 volumes:
-  redis-data:
+  trading-data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./data
+      o: bind,uid=1001,gid=1001,rw
 
 networks:
   trading-network:
