--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,21 +13,36 @@ services:
       - trading-network
 
   receiver:
-    build: .
+    build:
+      context: .
+      dockerfile: src/receiver/deribit/Dockerfile
     container_name: trading-app-receiver
+    env_file:
+      - config/.env
+    environment:
+      - DB_BASE_PATH=/app/data
     volumes:
       - ./config:/app/config:ro
       - trading-data:/app/data
-    environment:
-      - DB_BASE_PATH=/app/data
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - trading-network
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '1.0'
+    user: "1001:1001"
     security_opt:
       - no-new-privileges:true
     read_only: true
     tmpfs:
       - /tmp
-    user: "1001:1001"
 
 volumes:
+  redis-data:  # Add this volume definition
   trading-data:
     driver: local
     driver_opts:
