--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ cover/
 
 # Django stuff:
 *.log
-#local_settings.py
-#*.sqlite3
+local_settings.py
+*.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
