--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,32 +15,20 @@ services:
   receiver:
     build:
       context: .
-      dockerfile: src/receiver/deribit/Dockerfile
+      dockerfile: Dockerfile
     container_name: trading-app-receiver
-    env_file:
-      - config/.env
-    environment:
-      - DB_BASE_PATH=/app/data
     depends_on:
       redis:
         condition: service_healthy
     networks:
       - trading-network
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '1.0'
-    user: "1001:1001"
-    security_opt:
-      - no-new-privileges:true
-    read_only: true
-    tmpfs:
-      - /tmp
+    environment:
+      - DB_BASE_PATH=/app/data
     volumes:
       - ./config:/app/config:ro
       - trading-data:/app/data
-
+    user: "1001:1001"  # Matches appuser in Dockerfile
+    
 volumes:
   redis-data:
   trading-data: 
