--- a/trading/receiver/src/deribit/Dockerfile
+++ b/trading/receiver/src/deribit/Dockerfile
@@ -1,31 +1,58 @@
+# Use multi-stage build for smaller final image
+# Stage 1: Builder
+FROM python:3.13-slim AS builder
+
+# Set environment variables
+ENV PYTHONUNBUFFERED=1 \
+    DB_BASE_PATH="/app/data"
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create app structure
+RUN mkdir -p /app && chmod 775 /app
+WORKDIR /app
+
+# Copy only necessary files for dependency installation
+COPY trading/shared/pyproject.toml /app/shared/
+COPY trading/shared/src /app/shared/src
+COPY trading/receiver/pyproject.toml /app/receiver/
+COPY trading/receiver/src /app/receiver/src
+COPY trading/scripts /app/scripts
+
+# Install Python dependencies
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir /app/shared && \
+    pip install --no-cache-dir /app/receiver
+
+# Stage 2: Runtime
 FROM python:3.13-slim
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONPATH="/app/src:/app/src/shared:/app/src/receiver" \
-    DB_BASE_PATH="/app/data"
+    DB_BASE_PATH="/app/data" \
+    PYTHONPATH="/app/scripts:/app/packages" \
+    PATH="/app/.local/bin:$PATH"
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends build-essential && \
-    rm -rf /var/lib/apt/lists/*
-
-# Create app structure
-RUN mkdir -p /app/src && chmod 775 /app
-WORKDIR /app
-
-# Copy only necessary files
-COPY src/shared /app/src/shared
-COPY src/receiver /app/src/receiver
-COPY config /app/config
-
-# Install Python dependencies directly from pyproject.toml
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir /app/src/shared && \
-    pip install --no-cache-dir /app/src/receiver
-
-# Create non-root user
+# Create app user and structure
 RUN useradd -u 1001 -m appuser && \
-    chown -R appuser:appuser /app
-USER appuser
+    mkdir -p /app/data && chown -R appuser:appuser /app && \
+    chmod 775 /app /app/data
 
-CMD ["python", "-u", "/app/src/receiver/deribit/main.py"]
+# Copy installed packages from builder
+COPY --from=builder --chown=appuser:appuser /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
+COPY --from=builder --chown=appuser:appuser /usr/local/bin /usr/local/bin
+
+# Copy application code
+COPY --chown=appuser:appuser config /app/config
+COPY --chown=appuser:appuser trading/scripts /app/scripts
+COPY --chown=appuser:appuser trading/receiver/src/deribit /app/receiver
+
+# Switch to non-root user
+USER appuser
+WORKDIR /app/receiver
+
+# Run the application
+CMD ["python", "-u", "main.py"]
