--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   redis:
     image: redis:7-alpine
@@ -12,11 +13,10 @@ services:
     networks:
       - trading-network
 
-
   receiver:
     build:
       context: .
-      dockerfile: trading/receiver/src/deribit/Dockerfile
+      dockerfile: docker/compose.prod.yml
     container_name: trading-app-receiver
     depends_on:
       redis:
@@ -31,10 +31,8 @@ services:
 
 volumes:
   redis-data:
-  trading-data: 
+  trading-data:
 
 networks:
   trading-network:
     driver: bridge
-
-    
