--- a/trading/receiver/Dockerfile
+++ b/trading/receiver/Dockerfile
@@ -1,28 +1,23 @@
 # Stage 1: Builder
 FROM python:3.13-slim AS builder
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    DB_BASE_PATH="/app/data"
-
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Create app structure
+# Create app structure with proper permissions
 RUN mkdir -p /app && chmod 775 /app
 WORKDIR /app
 
 # Copy only necessary files for dependency installation
-COPY trading/shared/pyproject.toml trading/shared/shared/ /app/shared/
-COPY trading/receiver/pyproject.toml trading/receiver/receiver/ /app/receiver/
-COPY trading/scripts /app/scripts
+COPY trading/shared/pyproject.toml trading/shared/ /app/shared/
+COPY trading/receiver/pyproject.toml trading/receiver/ /app/receiver/
 
-# Install Python dependencies using proper package structure
+# Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -e /app/shared && \
-    pip install --no-cache-dir -e /app/receiver
+    pip install --no-cache-dir /app/shared && \
+    pip install --no-cache-dir /app/receiver
 
 # Stage 2: Runtime
 FROM python:3.13-slim
@@ -34,7 +29,8 @@ ENV PYTHONUNBUFFERED=1 \
 
 # Create app user and structure
 RUN useradd -u 1001 -m appuser && \
-    mkdir -p /app/data && chown -R appuser:appuser /app && \
+    mkdir -p /app/data /app/config /app/scripts && \
+    chown -R appuser:appuser /app && \
     chmod 775 /app /app/data
 
 # Copy installed packages from builder
@@ -44,11 +40,11 @@ COPY --from=builder --chown=appuser:appuser /usr/local/bin /usr/local/bin
 # Copy application code
 COPY --chown=appuser:appuser config /app/config
 COPY --chown=appuser:appuser trading/scripts /app/scripts
-COPY --chown=appuser:appuser trading/receiver/receiver/deribit /app/receiver
+COPY --chown=appuser:appuser trading/receiver/receiver /app/receiver
 
 # Switch to non-root user
 USER appuser
 WORKDIR /app/receiver
 
 # Run the application
-CMD ["python", "-u", "main.py"]
+CMD ["python", "-m", "deribit.main"]
