--- a/trading/processor/Dockerfile
+++ b/trading/processor/Dockerfile
@@ -10,26 +10,37 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN mkdir -p /app && chmod 775 /app
 WORKDIR /app
 
-# Copy dependency files first for caching
-COPY trading/shared/pyproject.toml /app/shared/
-COPY trading/receiver/pyproject.toml /app/receiver/
+# Copy shared package (same as receiver)
+COPY trading/shared /app/shared
+RUN mv /app/shared/shared /app/shared_pkg && \
+    mv /app/shared /app/shared_src && \
+    mkdir -p /app/shared && \
+    mv /app/shared_src/pyproject.toml /app/shared/ && \
+    mv /app/shared_pkg /app/shared/shared
+
+# Copy processor package
+COPY trading/processor /app/processor
+RUN mv /app/processor/processor /app/processor_pkg && \
+    mv /app/processor /app/processor_src && \
+    mkdir -p /app/processor && \
+    mv /app/processor_src/pyproject.toml /app/processor/ && \
+    mv /app/processor_pkg /app/processor/processor
 
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir /app/shared && \
-    pip install --no-cache-dir /app/receiver
+    pip install --no-cache-dir /app/processor
 
 # Stage 2: Runtime
 FROM python:3.13-slim
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1 \
-    DB_BASE_PATH="/app/data" \
-    PYTHONPATH="/app/scripts:$PYTHONPATH"
+    DB_BASE_PATH="/app/data"
 
 # Create app user and structure
 RUN useradd -u 1001 -m appuser && \
-    mkdir -p /app/data /app/config /app/scripts && \
+    mkdir -p /app/data && \
     chown -R appuser:appuser /app && \
     chmod 775 /app /app/data
 
@@ -37,18 +48,9 @@ RUN useradd -u 1001 -m appuser && \
 COPY --from=builder --chown=appuser:appuser /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
 COPY --from=builder --chown=appuser:appuser /usr/local/bin /usr/local/bin
 
-# Copy application code
-COPY --chown=appuser:appuser config /app/config
-COPY --chown=appuser:appuser trading/scripts /app/scripts
-COPY --chown=appuser:appuser trading/receiver/receiver /app/receiver
-
 # Switch to non-root user
 USER appuser
-WORKDIR /app/receiver
+WORKDIR /app
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=5s \
-    CMD python -c "import socket; socket.create_connection(('localhost', 8000), timeout=2)" || exit 1
-
-# Run the application
-CMD ["python", "-m", "deribit.main"]
+# Run the processor
+CMD ["python", "-m", "processor.main"]
