--- a/trading/processor/Dockerfile
+++ b/trading/processor/Dockerfile
@@ -10,21 +10,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN mkdir -p /app && chmod 775 /app
 WORKDIR /app
 
-# Copy shared package (same as receiver)
-COPY trading/shared /app/shared
-RUN mv /app/shared/shared /app/shared_pkg && \
-    mv /app/shared /app/shared_src && \
-    mkdir -p /app/shared && \
-    mv /app/shared_src/pyproject.toml /app/shared/ && \
-    mv /app/shared_pkg /app/shared/shared
+# Copy shared package
+COPY trading/shared/pyproject.toml /app/shared/
+COPY trading/shared/shared /app/shared/shared
 
 # Copy processor package
-COPY trading/processor /app/processor
-RUN mv /app/processor/processor /app/processor_pkg && \
-    mv /app/processor /app/processor_src && \
-    mkdir -p /app/processor && \
-    mv /app/processor_src/pyproject.toml /app/processor/ && \
-    mv /app/processor_pkg /app/processor/processor
+COPY trading/processor/pyproject.toml /app/processor/
+COPY trading/processor/processor /app/processor/processor
 
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
@@ -48,9 +40,12 @@ RUN useradd -u 1001 -m appuser && \
 COPY --from=builder --chown=appuser:appuser /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
 COPY --from=builder --chown=appuser:appuser /usr/local/bin /usr/local/bin
 
+# Copy processor code
+COPY --chown=appuser:appuser trading/processor/processor /app/processor
+
 # Switch to non-root user
 USER appuser
-WORKDIR /app
+WORKDIR /app/processor
 
 # Run the processor
-CMD ["python", "-m", "processor.main"]
+CMD ["python", "main.py"]
